(blog)Fix image size issues on smaller screens

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -64,6 +64,7 @@
 }
 .blog-post p img {
     max-width: 800px;
+    width: 100%;
 }
 .blog-post p a {
     color: #13a5ad;
